# czar-old

./: .gitignore  Cargo.toml  README.md  build.rs
misc/: glue.c  std.cz  test.cz
src/: codegen.rs  compile.rs  compiler.rs  diag.rs  hir.rs  main.rs  package.rs  sem.rs  semantic.rs  syn.rs  syntax.rs  test.rs  util.rs
src/codegen/: fns.rs  llvm.rs  loops.rs  types.rs
src/codegen/llvm/: intrinsic.rs
src/hir/: display.rs  traverse.rs
src/package/: check_data.rs
src/semantic/: check.rs  diag.rs  discover.rs  discover_names.rs  resolve.rs  resolve_names.rs  type_check.rs
src/semantic/check/: binary_op.rs  data.rs  dump_types.rs  fns.rs  impls.rs  inference.rs  lang.rs  lex_path.rs  normalize.rs  range.rs  slice.rs  structs.rs  unary_op.rs
src/syn/: display.rs  lex.rs  parser.rs  traverse.rs
src/syn/parser/: test.rs
src/syntax/: display.rs  lex.rs  parse.rs  traverse.rs
src/syntax/parse/: test.rs
src/util/: enums.rs  iter.rs
test_data/end_to_end/arith_ops/: main.cz  run.stdout.txt
test_data/end_to_end/block_non_expr_result/: main.cz
test_data/end_to_end/char/: main.cz  run.stdout.txt
test_data/end_to_end/cmp_i32/: main.cz
test_data/end_to_end/cmp_isize/: main.cz  run.stdout.txt
test_data/end_to_end/cmp_ops/: main.cz  run.stdout.txt
test_data/end_to_end/cmp_u32/: main.cz  run.stdout.txt
test_data/end_to_end/cmp_usize/: main.cz
test_data/end_to_end/err__assign_mismatching_types/: main.cz  stderr.txt
test_data/end_to_end/err__assign_to_non_lvalue/: main.cz  stderr.txt
test_data/err__ty_param_count_struct_recursive/: main.cz  stderr.txt
(+268 files in other folders)
