[package]
name = "czar"
version = "0.1.0"
authors = ["Dmytro Lysai <d@emphased.net>"]
edition = "2018"
build = "build.rs"

[dependencies]
arrayvec = "0.5"
atomic_refcell = "0.1"
backtrace = "0.3"
enum-as-inner = "0.3"
enum-map = "0.6"
enum-map-derive = "0.4"
if_chain = "1"
llvm-sys = "100"
matches = "0.1"
measure_time = "0.6"
num_enum = "0.5"
slab = "0.4"

[dev-dependencies]
num_cpus = "1.13"
tempfile = "3.1"
threadpool = "1.8"